# AyushMan

./: .gitattributes  .gitignore  PHILOSOPHY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py  add_path.py  extract_zip.py  global_paths.py  registry.py  request_url.py  result.py  validation.py
src/ayushman/: __main__.py  add_path.py  constants.py  extract_zip.py  global_paths.py  path.py  registry.py  registry_supported.py  request_url.py  result.py  uninstall.py  utils.py  validation.py  validator.py
tests/: conftest.py  test_extract_zip.py  test_registry.py  test_uninstall.py  test_utils.py  test_validator.py
