[project]
name = "ayushman"
version = "0.1.0"
description = "A minimal Windows-only package manager for prebuilt GitHub executables"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "JourneyCodesAyush", email = "journeycodes.ayush@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "requests"
]

[project.scripts]
ayushman = "ayushman.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
